<resources>
    <string name="app_name">Drop Truck</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_sign_in_content">Sign In to your account</string>
    <string name="txt_email_id">Email Id</string>
    <string name="txt_email_id_hint">Enter your Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">Enter your password</string>
    <string name="txt_dont_have_account">Don\'t have an account?</string>
    <string name="txt_sign_up_now">Sign Up Now</string>
    <string name="signup_title_member">Member Sign Up</string>
    <string name="signup_content">Create account &amp; avail all services</string>
    <string name="txt_first_name">Company Name</string>
    <string name="hint_first_name">Your first name</string>
    <string name="txt_last_name">Your name</string>
    <string name="hint_last_name">Your last name</string>
    <string name="txt_terms_condition1">I read and agree to the</string>
    <string name="txt_terms_condition2"> Terms and Conditions</string>
    <string name="txt_have_account">Have an account?</string>
    <string name="txt_sigin_now"> Sign In Now</string>
    <string name="txt_sigup_for">Are you signing up for?</string>
    <string name="txt_phone_number">Mobile number</string>
    <string name="hint_phone_number">Enter your Mobile number</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="companyName">Company Name</string>
    <string name="gst">GST</string>
    <string name="address">Address</string>
    <string name="quantity">Select Quantity</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="medicalRecord">Medical Records</string>
    <string name="billingDetail">Billing Details</string>
    <string name="paymentHistory">Payment History</string>
    <string name="settings">Settings</string>
    <string name="helpSupport">Help Support</string>
    <string name="aboutLegar">About Legal AppMD</string>
    <string name="view_all">View All</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="services">Services</string>
    <string name="doctor">Doctors</string>
    <string name="document">Documents</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_intent">Create Intent</string>
    <string name="customer_name">Customer Name</string>
    <string name="company_name">Company Name</string>
    <string name="number_one">Number 1</string>
    <string name="number_two">Number 2</string>
    <string name="source_of_lead">Source of Lead</string>
    <string name="pickup_locations">Pickup Locations</string>
    <string name="drop_locations">Drop Locations</string>
    <string name="truck_type">Truck Type</string>
    <string name="body_type">Body Type </string>
    <string name="weight">Weight</string>
    <string name="material_type">Material Type</string>
    <string name="pod_soft">POD</string>
    <string name="remarks">Remarks</string>
    <string name="payment_term">Payment Terms</string>
    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
    <string name="dashboard">Dashboard</string>
    <string name="enquiry">Enquirys</string>
    <string name="trips">Trips</string>
    <string name="reports">Reports</string>
    <string name="api_key">AIzaSyBm5_ydfeuAbE2ZXUkRnVV4PTtLEGbVmQk</string>
    <string-array name="TruckType">
        <item>Select truck type</item>
        <item value="1">Tata Ace</item>
        <item value="2">Dost</item>
        <item value="3">Bolero</item>
        <item value="4">Bada Dost</item>
        <item value="5">407</item>
        <item value="6">12 Feet</item>
        <item value="7">14 Feet </item>
        <item value="8">17 Feet </item>
        <item value="9">19 Feet</item>
        <item value="10">20 Feet</item>
        <item value="11">22 Feet</item>
        <item value="12">24 Feet</item>
        <item value="13">26 Feet</item>
        <item value="14">32 SXL</item>
        <item value="15">32 MXL</item>
        <item value="16">32 SXL - HQ</item>
        <item value="17">32 MXL - HQ</item>
        <item value="18">32 JCB</item>
        <item value="19">20 Feet Trailor</item>
        <item value="20">40 Feet Trailor- 2XL</item>
        <item value="21">40 Feet Trailor- 3XL</item>
        <item value="22">24 Feet Trailor</item>
        <item value="23">40 Feet Trailor- Low Bed</item>
        <item value="24">40 Feet Trailor- Semi Bed </item>
        <item value="25">40 Feet Trailor- High Bed</item>
        <item value="26">6 Wheel</item>
        <item value="27">10 Wheel</item>
        <item value="28">12 Wheel</item>
        <item value="29">14 Wheel</item>
        <item value="30">16 Wheel</item>
        <item value="31">18 Wheel</item>
        <item value="32">Car Carrier</item>
        <item value="33">Part Load</item>
        <item value="34">Others</item>
    </string-array>
    <string-array name="MaterialType">
        <item>Select material type</item>
        <item value="1">Boxes</item>
        <item value="2">Machine</item>
        <item value="3">Cotton Box</item>
        <item value="4">Wire</item>
        <item value="5">Coil</item>
        <item value="6">Plates</item>
        <item value="7">Furniture</item>
        <item value="8">Electrical</item>
        <item value="9">Eletronics</item>
        <item value="10">Tanks</item>
        <item value="11">Bags</item>
        <item value="12">Pallet with chemical bags</item>
        <item value="13">Ginger</item>
        <item value="14">Tiles</item>
        <item value="15">Plastic</item>
        <item value="16">plywood</item>
        <item value="17">Cylinder tank</item>
        <item value="18">Catton box</item>
        <item value="19">Others</item>
        
    </string-array>
    <string-array name="sourceOfLead">
        <item>Select</item>
        <item value="Old data">Old data</item>
        <item value="Telecalling">Telecalling</item>
        <item value="Whatsapp">WhatsApp Blast</item>
        <item value="Justdial">Justdial</item>
        <item value="Referal">Referral</item>
        <item value="SMS">SMS</item>
        <item value="Webpage">Webpage</item>
        <item value="Field visit">Field visit</item>
        <item value="Trade Centre">Trade Centre</item>
        <item value="Sulekha">Sulekha</item>
        <item value="Others">Others</item>
    </string-array>
    <string-array name="BodyType">
        <item>Select body type</item>
        <item>Open</item>
        <item>Container</item>
        <item value="JCB - ( HALF BODY)">JCB - ( HALF BODY)</item>
        <item value="Any">Any</item>
        <item value="Others">Others</item>
    </string-array>
    <string-array name="CDBodyType">
        <item>Select</item>
        <item>Open</item>
        <item>Container</item>
    </string-array>
    <string-array name="WeightType">
        
        <item>kg</item>
        <item>tons</item>
    </string-array>
    <string-array name="Locations">
        <item>Ariyalur</item>
        <item>Chengalpattu</item>
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Cuddalore</item>
        <item>Dharmapuri</item>
        <item>Dindigul</item>
        <item>Erode</item>
        <item>Kallakurichi</item>
        <item>Kancheepuram</item>
        <item>Karur</item>
        <item>Krishnagiri</item>
        <item>Madurai</item>
        <item>Mayiladuthurai</item>
        <item>Nagapattinam</item>
        <item>Kanniyakumari</item>
        <item>Namakkal</item>
        <item>Perambalur</item>
        <item>Pudukottai</item>
        <item>Ramanathapuram</item>
        <item>Ranipet</item>
        <item>Salem</item>
        <item>Sivagangai</item>
        <item>Tenkasi</item>
        <item>Tanjavur</item>
        <item>Theni</item>
        <item>Thiruvallur</item>
        <item>Thiruvarur</item>
        <item>Thoothukudi</item>
        <item>Trichirappalli</item>
        <item>Tirunelveli</item>
        <item>Tirupathur</item>
        <item>Tiruppur</item>
        <item>Trivannamalai</item>
        <item>The Nilgiris</item>
        <item>Vellore</item>
        <item>Viluppuram</item>
        <item>Virudhunagar</item>
    </string-array>
    <string-array name="payment_terms">
        <item>Select</item>
        <item>90/10</item>
        <item>50/50</item>
        <item>COD</item>
        <item>Credit</item>
    </string-array>
    <string name="pod">POD</string>
    <string name="full_name">Full Name*</string>
    <string name="email_phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number*</string>
    <string name="password">Password</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="trip">Trips</string>
    <string name="history">History</string>
    <string name="no_trip">No Trips Found!</string>
    <string name="book_trip">Book a Trip</string>
    <string name="title_book_trip">Book A Trip!</string>
    <string name="btn_book_trip">Book Trip</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="goods_type">Goods Type</string>
    <string name="pick_date">Pickup Date</string>
    <string name="logout">Logout</string>
    <string name="book_truck">Book A Truck</string>
    <string name="contact_number">Contact Number</string>
    <string name="gst_number">GST Number</string>
    <string name="lead_source">Lead Source</string>
    <string name="save">Save</string>
    <string name="create_customer">Create Customer</string>
    <string name="hard_soft">POD Soft/Hard Copy</string>
    <string name="rate">Rate</string>
    <string name="view_intent">View Indent</string>
    <string name="enq_no">Enquiry No</string>
    <string name="transport">Transport Name</string>
    <string name="sales_person">Sales Person</string>
    <string name="win">Win</string>
    <string name="cancel_indent">Cancel Indent</string>
    <string name="customer_rate">Customer Rate</string>
    <string name="submit_rate">Submit Rate</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="cancel">Confirm Cancellation</string>
    <string name="date">Date</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="extra_cost">Extra Cost Type</string>
    <string name="amount">Amount</string>
    <string name="bill_copy">Bill Copy</string>
    <string name="unloading_photo">Unloading Photo</string>
    <string name="bill_copy_info">Bill Copies Information</string>
    <string name="submit_without_data">Submit Without Data</string>
    <string name="CourierReceiptNo">Courier Receipt No</string>
    <string name="PodSoftCopy">Pod Soft Copy</string>
    <string name="PodCourier">Pod Courier</string>
    <string name="create_pod">Create POD</string>
    <string name="extra_cost_title">Extra Cost</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="otp_content">Enter OTP code sent to your number</string>
    <string name="verify">Verify</string>
    <string name="PodReceipt">Pod Receipt</string>
</resources>