<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_close_24"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:background="@drawable/black_circle"
        android:backgroundTint="@color/colorPrimary"
        android:padding="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_marginTop="12dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/lock"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/otp_verify"
        android:visibility="visible"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/otp_content"
        android:visibility="visible"
        android:textSize="13sp"
        />

    <com.mukeshsolanki.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        tools:text="123456"
        app:OtpItemCount="6"
        app:OtpItemSpacing="3dp"
        app:OtpLineColor="@color/colorPrimary"
        app:OtpState_filled="true"
        app:OtpViewType="rectangle"
        android:focusable="true"
        android:clickable="true"
        android:cursorVisible="true"
        android:focusableInTouchMode="true"
        />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_gravity="end"
        tools:text="00:30 secs"
        android:visibility="visible"
        android:drawableStart="@drawable/round_access_time_24"
        android:drawablePadding="2dp"
        android:background="@drawable/dotted_rectangle"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/txt_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:layout_marginTop="8dp"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/resend_otp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textAllCaps="false"/>


</LinearLayout>